# trackput

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  run.sh  vcpkg.json
client/: CMakeLists.txt
client/src/: main.cpp
common/: CMakeLists.txt
monitor/: CMakeLists.txt
monitor/include/monitor/: convert.hpp  input-factory.hpp  input_code.hpp  input_listener.hpp  key.hpp  keyboard_listener.hpp  keyboard_monitor.hpp  keyboard_state.hpp  result.hpp  test_monitor.h
monitor/include/monitor/keyboard/: keyboard_monitor.hpp  linux-monitor.hpp  linux_monitor.hpp  macos-monitor.hpp  macos_monitor.hpp  window-monitor.hpp  window_monitor.hpp
monitor/include/monitor/macos/: macos_keyboard_monitor.hpp
monitor/include/monitor/mouse/: linux-monitor.hpp  linux_monitor.hpp  macos-monitor.hpp  macos_monitor.hpp  mouse_monitor.hpp  windows_monitor.hpp  windows_mouse_monitor.hpp
monitor/internal/: linux_keyboard_monitor.hpp  linux_mouse_monitor.hpp  macos_keyboard_monitor.hpp  macos_mouse_monitor.hpp  singleton.hpp  windows_keyboard_monitor.hpp
monitor/src/: input-factory.cpp  macos_keyboard_monitor.cpp  test-monitor.cpp  test_monitor.cpp  windows_keyboard_monitor.cpp
run/: debug.sh
server/: CMakeLists.txt
server/include/mouse/: windows-monitor.hpp
server/src/: main.cpp
src/: main.cpp
tests/: CMakeLists.txt  main.cpp
